@@ -1,3 +1,8 @@
+2000-05-21  Paolo Nenzi <p.nenzi@ieee.org>
+
+	* inp2r.c: Modified ac parameter parsing code to conform to
+	           spice parameter parsing format
+
 2000-04-04  Paolo Nenzi <p.nenzi@ieee.org>
     
 	* inpfindl.c: Modified the file for BSIM4 and future extensions to
